# drf-api-permissions-postgres

./: README.md  db.sqlite3  docker-compose.yml  manage.py  pyproject.toml
books/: admin.py  forms.py  models.py  serializers.py  tests.py  urls.py  views.py
books/migrations/: 0001_initial.py
library_api_project/: asgi.py  settings.py  urls.py  wsgi.py
